language/grammar/syntax.ebnf
(* Aster — Syntax Grammar *)
(* EBNF notation: | = alternation, {} = repetition, [] = optional, () = grouping *)

program        = { statement } ;

statement      = entity_decl
               | action_decl
               | cycle_decl
               | action_call
               ;

entity_decl    = "entity" , identifier ;

action_decl    = "action" , identifier , "(" , relation , ")" ;

relation       = identifier , "->" , identifier ;

cycle_decl     = "cycle" , identifier , "{" , { statement } , "}" ;

action_call    = identifier ;

identifier     = letter , { letter | digit | "-" | "_" } ;

letter         = "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j"
               | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t"
               | "u" | "v" | "w" | "x" | "y" | "z"
               | "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J"
               | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T"
               | "U" | "V" | "W" | "X" | "Y" | "Z"
               ;

digit          = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;

(* Whitespace and comments are ignored *)
whitespace     = " " | "\t" | "\n" | "\r" ;
comment        = "#" , { any_char } , "\n" ;
